--- a/Order_Item/Order_Item/Dockerfile
+++ b/Order_Item/Order_Item/Dockerfile
@@ -3,22 +3,16 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
-EXPOSE 80
-
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
-WORKDIR /src
-COPY ["Order_Item/Order_Item.csproj", "Order_Item/"]
-RUN dotnet restore "Order_Item/Order_Item.csproj"
-COPY . .
-WORKDIR "/src/Order_Item"
-RUN dotnet build "Order_Item.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "Order_Item.csproj" -c Release -o /app/publish
-
-FROM base AS final
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "Order_Item.dll"]
